--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
