--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj.filters
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="Vehicle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
