--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Customer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
