--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Customer.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
