--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Customer.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RentalTransaction.cpp" />
     <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
