--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Customer.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Pointer.h" />
     <ClInclude Include="RentalTransaction.h" />
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
