--- a/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj.filters
+++ b/💻 VRMS (Vehicle Rental Management System)_{6023}.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pointer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
